Miscellaneous fixes in debian/control and debian/rules.
  * Install the upstream changelog.
  * Bump Build-Depends: xserver-xorg-dev to >= 2:1.2.99.902
    (needed to let xsfbs get access to serverminver).
  * Add XS-Vcs-*.
  * Add a link to www.X.org and a reference to the xf86-input-vmmouse
    module in the long description.

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,10 @@ Section: x11
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: David Nusinow <dnusinow@debian.org>, Branden Robinson <branden@debian.org>, Drew Parsons <dparsons@debian.org>
-Build-Depends: debhelper (>= 5), pkg-config, xserver-xorg-dev (>= 2:1.2.0-3), x11proto-input-dev, x11proto-core-dev, x11proto-randr-dev, quilt
+Build-Depends: debhelper (>= 5), pkg-config, xserver-xorg-dev (>= 2:1.2.99.902), x11proto-input-dev, x11proto-core-dev, x11proto-randr-dev, quilt
 Standards-Version: 3.7.2
+XS-Vcs-Git: git://git.debian.org/git/pkg-xorg/driver/xserver-xorg-input-vmmouse
+XS-Vcs-Browser: http://git.debian.org/?p=pkg-xorg/driver/xserver-xorg-input-vmmouse.git
 
 Package: xserver-xorg-input-vmmouse
 Architecture: i386 amd64
@@ -24,5 +26,8 @@ Description: X.Org X server -- VMMouse input driver to use with VMWare
  without having to edit xorg.conf every time.
  .
  More information about X.Org can be found at:
+ <URL:http://www.X.org>
  <URL:http://xorg.freedesktop.org>
  <URL:http://lists.freedesktop.org/mailman/listinfo/xorg>
+ .
+ This package is built from the X.org xf86-input-vmmouse driver module.
