--- a/debian/rules
+++ b/debian/rules
@@ -72,7 +72,7 @@ binary-arch: build install serverabi
 	dh_testroot
 
 	dh_installdocs README
-	dh_installchangelogs
+	dh_installchangelogs ChangeLog
 	dh_install --sourcedir=debian/tmp --list-missing --exclude=vmmouse_drv.la --exclude=usr/share/man/man4
 	dh_installman
 	dh_link
