Move shared vmmouse files into a separate static lib so we can share it with the vmmouse detection utility I'm about to add.

--- a/configure.ac
+++ b/configure.ac
@@ -101,4 +101,4 @@ AC_HEADER_STDC
 XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
-AC_OUTPUT([Makefile src/Makefile man/Makefile])
+AC_OUTPUT([Makefile shared/Makefile src/Makefile man/Makefile])
