--- a/debian/rules
+++ b/debian/rules
@@ -79,7 +79,7 @@ binary-arch: build install serverabi
 
 	dh_installdocs README
 	dh_installchangelogs ChangeLog
-	dh_install --sourcedir=debian/tmp --list-missing --exclude=vmmouse_drv.la --exclude=usr/share/man/man4
+	dh_install --sourcedir=debian/tmp --list-missing --exclude=vmmouse_drv.la
 	dh_installman
 	dh_link
 	dh_strip
