Improve make rule for hal-probe-vmmouse.
Make sure changes to hal-probe-vmmouse.in get picked up automatically and
simplify the way it's passed to sed.

Thanks to Dan Nicholson for the suggestion.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -28,10 +28,10 @@ INCLUDES = -I$(top_srcdir)/shared
 calloutsdir=$(HAL_CALLOUTS_DIR)
 callouts_SCRIPTS = hal-probe-vmmouse
 
-hal-probe-vmmouse:
+hal-probe-vmmouse: hal-probe-vmmouse.in
 	sed -e 's|__BIN_PREFIX__|$(bindir)|g' \
 	    -e 's|__HAL_BIN_PREFIX__|$(HAL_BIN_DIR)|g' \
-	    < $(srcdir)/$@.in > $@
+	    < $< > $@
 
 EXTRA_DIST = hal-probe-vmmouse.in
 
