man: move vmmouse_detect back to section 1
Was moved to section 4 in commit 36c2cd8ec6d3bf7191a98a04a876e8d7b6f64d5d,
"man: build vmmouse_detect man page".

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -23,13 +23,17 @@
 
 drivermandir = $(DRIVER_MAN_DIR)
 
-driverman_PRE = @DRIVER_NAME@.man @DRIVER_NAME@_detect.man
+driverman_PRE = @DRIVER_NAME@.man
 
 driverman_DATA = $(driverman_PRE:man=@DRIVER_MAN_SUFFIX@)
 
-EXTRA_DIST = @DRIVER_NAME@.man @DRIVER_NAME@_detect.man
+appmandir = $(APP_MAN_DIR)
+appman_PRE = @DRIVER_NAME@_detect.man
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-CLEANFILES = $(driverman_DATA)
+EXTRA_DIST = @DRIVER_NAME@.man $(appman_PRE)
+
+CLEANFILES = $(driverman_DATA) $(appman_DATA)
 
 # Strings to replace in man pages
 XORGRELSTRING = @PACKAGE_STRING@
@@ -50,4 +54,6 @@ MAN_SUBSTS = \
 SUFFIXES = .$(DRIVER_MAN_SUFFIX) .man
 
 .man.$(DRIVER_MAN_SUFFIX):
+	$(AM_V_GEN)$(SED) $(MAN_SUBSTS) < $< > $@
+.man.$(APP_MAN_SUFFIX):
 	$(AM_V_GEN)$(SED) $(MAN_SUBSTS) < $< > $@
