Use new xsfbs and ${xinpdriver:Depends}.

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Vcs-Browser: http://git.debian.org/?p=pkg-xorg/driver/xserver-xorg-input-vmmouse
 
 Package: xserver-xorg-input-vmmouse
 Architecture: i386 amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${xserver:Depends},
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${xinpdriver:Depends},
  xserver-xorg-input-mouse,
  udev
 Provides: ${xinpdriver:Provides}
