--- a/debian/rules
+++ b/debian/rules
@@ -43,6 +43,7 @@ build-stamp: configure
 	test -d build || mkdir build
 	cd build && \
 	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
+		     --bindir=/bin \
 	             --infodir=\$${prefix}/share/info $(confflags) \
 	             CFLAGS="$(CFLAGS)"
 	cd build && $(MAKE)
