--- a/configure.ac
+++ b/configure.ac
@@ -127,6 +127,10 @@ PKG_CHECK_EXISTS([xorg-server >= 1.1.0],
                  [AC_DEFINE([HAVE_XORG_SERVER_1_1_0], 1,
                             [Has version 1.1.0 or greater of the Xserver])])
 
+PKG_CHECK_EXISTS([xorg-server > 1.4.99],
+		[AC_DEFINE([HAVE_XORG_SERVER_1_5_0], 1,
+		[Has version 1.5.0 or greater of the Xserver])])
+
 PKG_CHECK_EXISTS([xorg-server >= 1.3.99.0 xorg-server <= 1.4.0.90],
                  [AC_DEFINE([CALL_CONVERSION_PROC], 1,
                             [Call conversion_proc from within the driver, as
