tools make: use Autoconf provided $(AM_V_GEN)$(SED)
Enables silent rule and use platform appropriate version of sed.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>
Acked-by: Thomas Hellstrom <thellstrom@vmware.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -50,7 +50,7 @@ udevdir=$(UDEV_RULES_DIR)
 udev_DATA = 69-xorg-vmmouse.rules
 
 $(udev_DATA): $(udev_DATA).in
-	sed -e 's|__BIN_PREFIX__|$(bindir)|g' < $< > $@
+	$(AM_V_GEN)$(SED) -e 's|__BIN_PREFIX__|$(bindir)|g' < $< > $@
 
 CLEANFILES += $(udev_DATA)
 
