--- a/debian/rules
+++ b/debian/rules
@@ -83,7 +83,7 @@ binary-arch: build install serverabi
 
 	dh_installdocs README
 	dh_installchangelogs ChangeLog
-	dh_install --sourcedir=debian/tmp --list-missing --exclude=vmmouse_drv.la
+	dh_install --sourcedir=debian/tmp --fail-missing --exclude=vmmouse_drv.la
 	dh_installman
 	dh_link
 	dh_strip
