--- a/debian/control
+++ b/debian/control
@@ -4,16 +4,14 @@ Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: David Nusinow <dnusinow@debian.org>, Drew Parsons <dparsons@debian.org>, Brice Goglin <bgoglin@debian.org>, Cyril Brulebois <kibi@debian.org>
 Build-Depends:
- debhelper (>= 5),
+ debhelper (>= 8),
+ dh-autoreconf,
  pkg-config,
- xserver-xorg-dev (>= 2:1.9.0.901),
+ xserver-xorg-dev (>= 2:1.9.4),
  x11proto-input-dev,
  x11proto-core-dev,
  x11proto-randr-dev,
  quilt,
- dpkg-dev (>= 1.14.17),
- automake,
- libtool,
  xutils-dev (>= 1:7.5+4),
 Standards-Version: 3.8.4
 Vcs-Git: git://git.debian.org/git/pkg-xorg/driver/xserver-xorg-input-vmmouse
