--- a/debian/rules
+++ b/debian/rules
@@ -18,4 +18,4 @@ override_dh_shlibdeps:
 	dh_shlibdeps -- --warnings=6
 
 %:
-	dh $@ --with autoreconf,quilt,xsf --builddirectory=build/
+	dh $@ --with quilt,autoreconf,xsf --builddirectory=build/
